--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^24.0.2",
     "husky": ">=4",
+    "jest": "^26.4.2",
     "lint-staged": ">=10",
     "prettier": "^2.1.2",
     "rollup": "^2.28.2"
