feat: Add command line options, and command line logic
Add .env interperter and env.d.ts file generator logic

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "prettier": "prettier --write",
     "format": "yarn lint && yarn prettier",
     "test": "jest",
-    "start": "yarn build && node build/index.js",
+    "start": "yarn build && dotenv-types-generator",
     "build": "rollup -c"
   },
   "dependencies": {
@@ -31,7 +31,8 @@
     "jest": "^26.4.2",
     "lint-staged": ">=10",
     "prettier": "^2.1.2",
-    "rollup": "^2.28.2"
+    "rollup": "^2.28.2",
+    "rollup-plugin-preserve-shebang": "^1.0.1"
   },
   "husky": {
     "hooks": {
