--- a/.github/workflows/CI.js.yml
+++ b/.github/workflows/CI.js.yml
@@ -24,4 +24,5 @@ jobs:
       - run: yarn build
       - run: yarn link
       - run: yarn link dotenv-types-generator
+      - run: chmod +x ./build/index.js
       - run: yarn test
