--- a/.editorconfig
+++ b/.editorconfig
@@ -9,6 +9,7 @@ charset = utf-8
 indent_style = space
 indent_size = 2
 
-[{*.json,.*.yml}]
+[*.json,.*.yml]
 indent_style = space
 indent_size = 2
+
