fix: fix input fil dir for build, fix formatting for output file, edit test scripts

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "lint": "eslint --fix",
     "prettier": "prettier --write",
     "format": "yarn lint && yarn prettier",
+    "pretest": "yarn build",
     "test": "jest",
+    "test:CI": "test --coverage",
     "start": "yarn build && dotenv-types-generator",
     "build": "rollup -c && chmod +x build/index.js"
   },
