--- a/.github/workflows/CI.js.yml
+++ b/.github/workflows/CI.js.yml
@@ -24,5 +24,5 @@ jobs:
       - run: yarn build
       - run: yarn link
       - run: yarn link dotenv-types-generator
-      - run: yarn test --coverage
+      - run: yarn test:CI
       - run: bash <(curl -s https://codecov.io/bash)
